RESOLVED FIXED157309
[Win] Warning fix.
https://bugs.webkit.org/show_bug.cgi?id=157309
Summary [Win] Warning fix.
peavo
Reported 2016-05-03 06:57:26 PDT
MSVC gives a warning when converting from signed to unsigned.
Attachments
Patch (1.14 KB, patch)
2016-05-03 07:01 PDT, peavo
darin: review+
peavo
Comment 1 2016-05-03 07:01:18 PDT
peavo
Comment 2 2016-05-03 10:59:39 PDT
Thanks for reviewing!
peavo
Comment 3 2016-05-03 11:00:40 PDT
Note You need to log in before you can comment on or make changes to this bug.