[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=157309

Reviewed by Darin Adler.

MSVC gives a warning when converting from signed to unsigned.

* wtf/SmallPtrSet.h:
(WTF::SmallPtrSet::begin):


Canonical link: https://commits.webkit.org/175413@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200380 268f45cc-cd09-0410-ab3c-d52691b4dbfc